# cyberbot

./: .gitattributes  README.md
android/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: ic_launcher.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
avatar_sources/animations/: Clapping.fbx  Defeated.fbx  Dribble.fbx  Dying.fbx  Excited.fbx  Golf Drive.fbx  Hip Hop Dancing.fbx  Idle.fbx  Laughing.fbx  Mutant Flexing Muscles.fbx  Punch To Elbow Combo.fbx  Shrugging.fbx  Standing Greeting.fbx  Terrified.fbx  Typing.fbx  Walk Forward Arc Right.fbx  Warming Up.fbx
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml  railway.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: audio.py  conversation.py  health.py
backend/app/core/: __init__.py  claude_client.py  memory.py  redis_client.py  stt.py  tts.py
backend/app/models/: __init__.py  conversation.py  response.py
backend/app/tools/: __init__.py  perplexity_tool.py  registry.py  weather_tool.py
backend/scripts/: run_migration.py  test_claude.py  test_perplexity.py  test_stt.py  test_tts.py  test_weather.py  test_websocket.py
backend/supabase/migrations/: 001_initial_schema.sql  002_enable_rls.sql  003_fix_match_memories.sql  004_memories_hnsw_index.sql
backend/tests/: __init__.py  test_conversation.py  test_health.py
scripts/: merge_animations.py
(+23 files in other folders)
