[project]
name = "cyberbot-backend"
version = "1.0.0"
description = "CyberBot AI - backend for the holographic Android AI assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "anthropic>=0.40.0",
    "deepgram-sdk>=3.5.0",
    "openai>=1.40.0",
    "elevenlabs>=1.5.0",
    "supabase>=2.6.0",
    "redis>=5.0.0",
    "loguru>=0.7.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.uv]
# This project is an application, not an installable package.
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
